Remove deprecated Base64 classes